--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "parcel --no-cache",
     "build": "parcel build",
-    "deploy": "node deploy.js"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "execa": "^8.0.1",
+    "gh-pages": "^6.1.1",
     "parcel": "^2.11.0",
     "sass": "^1.71.0"
   },
